--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap" rel="stylesheet"> 
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <title>Special temples seva with satim</title>
+    <title>Astrology & Hawan Services</title>
     <meta name="description" content="SATIM is a Devotional website which is dedicated to assisting millions of Indians in their spiritual and devotional journeys." />
     <meta name="keywords" content="Dwarkadhish Temple,Ram Mandir, Ayodhya,Rin Mukti Puja , Uttam vivaah, Agar batti, Dhoop batti,Pooja Kit" />
 
